Add CORS config and application.properties, ignore .env file